# tweetynetplusplus

./: .coverage  .gitignore  README.md  pyproject.toml
configs/: default.toml  default_convnext.toml  default_efficientnet.toml  default_resnet50.toml  experiment_base.toml
src/tweetynetplusplus/: config.py
src/tweetynetplusplus/evaluation/: evaluate.py  reports.py
src/tweetynetplusplus/models/: factory.py
src/tweetynetplusplus/models/backbones/: resnet18_ft.py  simple_cnn.py
src/tweetynetplusplus/preprocessing/: dataset_builder.py  spectrograms.py  transforms.py
src/tweetynetplusplus/scripts/: __init__.py  eval_model.py  generate_report.py  preprocess_all.py  train_model.py  vizualize_confusion.py
src/tweetynetplusplus/training/: callbacks.py  experiment_logger.py  metrics.py  train.py  train_model.py
src/tweetynetplusplus/utils/: __init__.py  func.py  samplers.py
tests/: test_spectrograms.py
