[project]
name = "tweetynetplusplus"
version = "0.1.0"
description = "A deep learning framework for birdsong analysis and segmentation"
readme = "README.md"
authors = [
    {name = "Giovani", email = "giovani.angelo@gmail.com"},
]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "librosa==0.11.0",
    "numpy==1.26.4",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "tomli>=2.2.1",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "vak==1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "flake8>=6.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "-v --cov=tweetynetplusplus"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
